--- a/.openshift/deployment.yaml
+++ b/.openshift/deployment.yaml
@@ -12,28 +12,15 @@ spec:
       labels:
         app: Dictionary-Map-Viewer
     spec:
+      securityContext:
+        runAsNonRoot: true
       containers:
       - name: Dictionary-Map-Viewer
         image: your-image-name
         ports:
         - containerPort: 3838
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: Dictionary-Map-Viewer
-spec:
-  ports:
-  - port: 80
-    targetPort: 3838
-  selector:
-    app: Dictionary-Map-Viewer
----
-apiVersion: route.openshift.io/v1
-kind: Route
-metadata:
-  name: Dictionary-Map-Viewer
-spec:
-  to:
-    kind: Service
-    name: Dictionary-Map-Viewer
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
