--- a/.openshift/deployment.yaml
+++ b/.openshift/deployment.yaml
@@ -18,7 +18,6 @@ spec:
         runAsNonRoot: true
         seccompProfile:
           type: RuntimeDefault
-        fsGroup: 1000
       containers:
       - name: dictionary-map-viewer-test2
         image: your-image-name
@@ -41,7 +40,8 @@ spec:
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
-          runAsUser: 1000
+          runAsUser: 1000690000
+          runAsGroup: 1000690000
           seccompProfile:
             type: RuntimeDefault
           capabilities:
