--- a/.openshift/deployment.yaml
+++ b/.openshift/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dictionary-map-viewer
+  name: dictionary-map-viewer-test2
   labels:
     app: dictionary-map-viewer-test2
 spec:
@@ -18,6 +18,7 @@ spec:
         runAsNonRoot: true
         seccompProfile:
           type: RuntimeDefault
+        fsGroup: 1000690000
       containers:
       - name: dictionary-map-viewer-test2
         image: your-image-name
