Another test, last for tonight

--- a/.openshift/deployment.yaml
+++ b/.openshift/deployment.yaml
@@ -14,11 +14,7 @@ spec:
       labels:
         app: dictionary-map-viewer-test2
     spec:
-      securityContext:
-        runAsNonRoot: true
-        seccompProfile:
-          type: RuntimeDefault
-        fsGroup: 1000690000
+      securityContext: {}  # Remove pod-level security context
       containers:
       - name: dictionary-map-viewer-test2
         image: your-image-name
@@ -42,9 +38,6 @@ spec:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
           runAsUser: 1000690000
-          runAsGroup: 1000690000
-          seccompProfile:
-            type: RuntimeDefault
           capabilities:
             drop:
             - ALL
